Fix : 중간 nav 바 z-index: 10으로 수정

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -69,6 +69,7 @@
   background-color: white;
   border-top: 1px solid $theme-border-lightgray;
   border-bottom: 1px solid $theme-border-lightgray;
+  z-index: 10;
 
   .menuInner {
     width: 1400px;
